allprojects {
  apply plugin: 'java'
  apply plugin: 'eclipse'
  group = 'org.dbp'
  version = '1.0'
  sourceCompatibility = 1.8
  

}
subprojects{
  repositories {
    mavenCentral()
  }

  dependencies {
  	compile 'org.slf4j:slf4j-api:1.7.16'
  	compile 'ch.qos.logback:logback-classic:1.1.5'
    testCompile group: 'junit', name: 'junit', version: '4.+'
  }
}
